deploy-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: value
  template:
    metadata:
      labels:
        app: value
    spec:
      containers:
        - name: container-name
          image: nginx
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 500m
              memory: 1Gi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app:  value
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
