webtest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-dep
spec:
  selector:
    matchLabels:
      app: web
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: jenkins
          image: kanthreg.azurecr.io/helm-demo:#{Build.BuildNumber}#
          imagePullPolicy: Always
          ports:
            - name: http-port
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  type: LoadBalancer
  ports:
    - port: 81
      targetPort: 80
  selector:
    app: web
